Add Czech layout; code cleanup